Another update to the website

--- a/week01/index.html
+++ b/week01/index.html
@@ -52,16 +52,16 @@ Hacker with bullhorn: "Save your money! Accept one of our free tanks! It is invu
 
 Prospective station wagon buyer: "I know what you say is true...but...er...I don't know how to maintain a tank!"
 
-Bullhorn: "You don't know how to maintain a station wagon either!"
+<em>Bullhorn:</em> "You don't know how to maintain a station wagon either!"
 
-Buyer: "But this dealership has mechanics on staff. If something goes wrong with my station wagon, I can take a day off work, bring it here, and pay them to work on it while I sit in the waiting room for hours, listening to elevator music."
+<em>Buyer:</em> "But this dealership has mechanics on staff. If something goes wrong with my station wagon, I can take a day off work, bring it here, and pay them to work on it while I sit in the waiting room for hours, listening to elevator music."
 
-Bullhorn: "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"
+<em>Bullhorn:</em> "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"
 
-Buyer: "Stay away from my house, you freak!"
+<em>Buyer:</em> "Stay away from my house, you freak!"
 
-Bullhorn: "But..."
+<em>Bullhorn:</em> "But..."
 
-Buyer: "Can't you see that everyone is buying station wagons?"
+<em>Buyer:</em> "Can't you see that everyone is buying station wagons?"
 
 Copyright © 1999 by Neal Stephenson
