--- a/week01/index.html
+++ b/week01/index.html
@@ -48,9 +48,9 @@
 
 <p>The group giving away the free tanks only stays alive because it is staffed by volunteers, who are lined up at the edge of the street with bullhorns, trying to draw customers' attention to this incredible situation. A typical conversation goes something like this:</p>
 
-<p>Hacker with bullhorn: "Save your money! Accept one of our free tanks! It is invulnerable, and can drive across rocks and swamps at ninety miles an hour while getting a hundred miles to the gallon!"</p>
+<li>Hacker with bullhorn: "Save your money! Accept one of our free tanks! It is invulnerable, and can drive across rocks and swamps at ninety miles an hour while getting a hundred miles to the gallon!"</li>
 
-<p>Prospective station wagon buyer: "I know what you say is true...but...er...I don't know how to maintain a tank!"</p>
+<li>Prospective station wagon buyer: "I know what you say is true...but...er...I don't know how to maintain a tank!"</li>
 
 <em>Bullhorn:</em> "You don't know how to maintain a station wagon either!"
 
