--- a/week01/index.html
+++ b/week01/index.html
@@ -52,16 +52,17 @@
 
 <li>Prospective station wagon buyer: "I know what you say is true...but...er...I don't know how to maintain a tank!"</li>
 
-<em>Bullhorn:</em> "You don't know how to maintain a station wagon either!"
+<li><em>Bullhorn:</em> "You don't know how to maintain a station wagon either!"</li>
 
-<em>Buyer:</em> "But this dealership has mechanics on staff. If something goes wrong with my station wagon, I can take a day off work, bring it here, and pay them to work on it while I sit in the waiting room for hours, listening to elevator music."
+<li><em>Bullhorn:</em> "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"</li>
+<li><em>Buyer:</em> "But this dealership has mechanics on staff. If something goes wrong with my station wagon, I can take a day off work, bring it here, and pay them to work on it while I sit in the waiting room for hours, listening to elevator music."</li>
 
-<em>Bullhorn:</em> "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"
+<li><em>Bullhorn:</em> "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"</li>
 
-<em>Buyer:</em> "Stay away from my house, you freak!"
+<li><em>Buyer:</em> "Stay away from my house, you freak!"</li>
 
-<em>Bullhorn:</em> "But..."
+<li><em>Bullhorn:</em> "But..."</li>
 
-<em>Buyer:</em> "Can't you see that everyone is buying station wagons?"
+<li><em>Buyer:</em> "Can't you see that everyone is buying station wagons?"</li>
 
 Copyright © 1999 by Neal Stephenson
