--- a/week01/index.html
+++ b/week01/index.html
@@ -48,21 +48,21 @@
 
 <p>The group giving away the free tanks only stays alive because it is staffed by volunteers, who are lined up at the edge of the street with bullhorns, trying to draw customers' attention to this incredible situation. A typical conversation goes something like this:</p>
 
-<li>Hacker with bullhorn: "Save your money! Accept one of our free tanks! It is invulnerable, and can drive across rocks and swamps at ninety miles an hour while getting a hundred miles to the gallon!"</li>
+<p>Hacker with bullhorn: "Save your money! Accept one of our free tanks! It is invulnerable, and can drive across rocks and swamps at ninety miles an hour while getting a hundred miles to the gallon!"</p>
 
-<li>Prospective station wagon buyer: "I know what you say is true...but...er...I don't know how to maintain a tank!"</li>
+<p>Prospective station wagon buyer: "I know what you say is true...but...er...I don't know how to maintain a tank!"</p>
 
-<li><em>Bullhorn:</em> "You don't know how to maintain a station wagon either!"</li>
+<p><em>Bullhorn:</em> "You don't know how to maintain a station wagon either!"</p>
 
-<li><em>Bullhorn:</em> "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"</li>
-<li><em>Buyer:</em> "But this dealership has mechanics on staff. If something goes wrong with my station wagon, I can take a day off work, bring it here, and pay them to work on it while I sit in the waiting room for hours, listening to elevator music."</li>
+<p><em>Bullhorn:</em> "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"</p>
+<p><em>Buyer:</em> "But this dealership has mechanics on staff. If something goes wrong with my station wagon, I can take a day off work, bring it here, and pay them to work on it while I sit in the waiting room for hours, listening to elevator music."</p>
 
-<li><em>Bullhorn:</em> "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"</li>
+<p><em>Bullhorn:</em> "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"</p>
 
-<li><em>Buyer:</em> "Stay away from my house, you freak!"</li>
+<p><em>Buyer:</em> "Stay away from my house, you freak!"</p>
 
-<li><em>Bullhorn:</em> "But..."</li>
+<p><em>Bullhorn:</em> "But..."</p>
 
-<li><em>Buyer:</em> "Can't you see that everyone is buying station wagons?"</li>
+<p><em>Buyer:</em> "Can't you see that everyone is buying station wagons?"</p>
 
 Copyright © 1999 by Neal Stephenson
