Inserted additional image tags

--- a/week02/index.html
+++ b/week02/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Using an image in the page.</h1>
-  <img src="https://nrtesfa.github.io/week02/horse.jpg">
+  <img src="https://nrtesfa.github.io/week02/horse.jpg" alt="Horse with brown eyes"
+     width="600" height="700">
 </body>
 </html>
