Updated multiple files with links

--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -45,6 +45,7 @@
   <li>Roll out to about 5mm. Cut into shapes.</li>
   <li>Bake for 25 minutes or until golden brown.</li>
 </ol>
+<p><a href="https://nrtesfa.github.io/week02/index.html">Visit my horse image page</a></p>
   <footer style="text-align: center;">
     <p>Copyright 2020 Nayab Tesfa</p>
   </footer>
