--- a/week02/index.html
+++ b/week02/index.html
@@ -9,5 +9,7 @@
   <h1>Using an image in the page.</h1>
   <img src="https://nrtesfa.github.io/week02/horse.jpg"
   alt="Horse with brown eyes"width="350">
+  <p><a href="https://nrtesfa.github.io/week02/coding101.html">
+  Visit my test page</a></p>
 </body>
 </html>
