--- a/week04/birds.html
+++ b/week04/birds.html
@@ -17,13 +17,14 @@
 </header>
 
       <ul>
+        <nav>
         <li><span>Home</span></li>
         <li><a href="#">Get started</a></li>
         <li><a href="#">Photos</a></li>
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
-
+      </nav>
 
       <h2>Welcome</h2>
 
