--- a/week04/birds.html
+++ b/week04/birds.html
@@ -8,13 +8,14 @@
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
-
-  <body>
-<header>
+    <article>
+    <header>
       <h1>Birdwatching</h1>
+    </header>
+  </article>
+  </head>
+  <body>
       <img src="dove.png" alt="a simple dove logo">
-</header>
 
       <ul>
         <nav>
