--- a/week04/birds.html
+++ b/week04/birds.html
@@ -8,24 +8,24 @@
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <article>
-    <header>
-      <h1>Birdwatching</h1>
-    </header>
-  </article>
   </head>
+
   <body>
+    <article>
+      <header>
+      <h1>Birdwatching</h1>
       <img src="dove.png" alt="a simple dove logo">
+    </article>
+  </header>
 
       <ul>
-        <nav>
         <li><span>Home</span></li>
         <li><a href="#">Get started</a></li>
         <li><a href="#">Photos</a></li>
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
-      </nav>
+
 
       <h2>Welcome</h2>
 
@@ -34,10 +34,16 @@
       <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
 
       <h2>Favourite photos</h2>
-      <nav>
+
       <a href="favorite-1.jpg"><img src="favorite-1_th.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
       <a href="favorite-2.jpg"><img src="favorite-2_th.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
       <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
       <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
-      </nav>
+
+
+      <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
+
+      <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
+
+  </body>
 </html>
