--- a/week04/birds.html
+++ b/week04/birds.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <article>
+  <header>
     <title>Birdwatching</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
-
+  </article>
+  </header>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
