--- a/week04/index.html
+++ b/week04/index.html
@@ -10,7 +10,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Courgette&family=Lato&family=Montserrat&display=swap"
       rel="stylesheet"
