--- a/week04/index.html
+++ b/week04/index.html
@@ -94,7 +94,7 @@
 
           <img
             src="tortilla-pizza-recipe4.jpg"
-            alt="pizza-img"
+            alt="tortillapizza-img"
             style="height: 600px"
           />
           <hr />
