--- a/week04/birds.html
+++ b/week04/birds.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="logo" href="dove.png" />
-    <link rel="stylesheet" href="index.css" type="text/css" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
 
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
