--- a/week06/index.html
+++ b/week06/index.html
@@ -7,7 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+    <!-- Custom styles for this template -->
+        <link href="css/custom.css" rel="stylesheet">
     <title>Hello, world!</title>
   </head>
   <body>
