--- a/week07/Earth.html
+++ b/week07/Earth.html
@@ -1,7 +1,11 @@
-let admin, name; 
+let admin, name;
 
 name = "John";
 
 admin = name;
 
 alert( admin );
+
+let ourPlanetName = "Earth";
+
+let currentUserName = "John";
