--- a/IMED1416/index.html
+++ b/IMED1416/index.html
@@ -82,6 +82,11 @@
             <td> Class Exercise 3 displays a Template for my Website </td>
             <td> <a href="ClassEx3/template1.html">Template 1 </a> </td>
         </tr> 
+        <tr>
+            <td> 10/05/2022 </td>
+            <td> Class Exercise 4 displays Flower CSS Box Models </td>
+            <td> <a href="ClassEx4/box.html"> Flower Box Models </a> </td>
+        </tr> 
     </table> 
 </body>
 </html>
