--- a/IMED1416/ClassEx4/box.html
+++ b/IMED1416/ClassEx4/box.html
@@ -45,7 +45,7 @@
 <div>The CSS Box Model is essentially a box that wraps around every HTML element. It consists of: border, padding, margins and the actual content. The CSS Box Model is essentially a box that wraps around every HTML element. It consists of: border, padding, margins and the actual content. The CSS Box Model is essentially a box that wraps around every HTML element. It consists of: border, padding, margins and the actual content. The CSS Box Model is essentially a box that wraps around every HTML element. It consists of: border, padding, margins and the actual content. The CSS Box Model is essentially a box that wraps around every HTML element. It consists of: border, padding, margins and the actual content.
 </div>
 
-<img src="klematis4_big.jpg" width = "350px" height = "263px" alt = "klematis4_big"> 
+<img src="klematis4_big.jpg" width = "350px" height = "263px" alt = "klematis4_big.jpg"> 
 
 <div>The picture above is 350 pix wide. The total width of this element is also 350px. </div>
 <hr>
@@ -55,7 +55,7 @@
 
 <center>
     <div class="container_2">
-        <img src="IMG_5114.jpg" alt ="red amarylis flower">
+        <img src="IMG_5114.jpg" alt ="IMG_5114.jpg">
         </div>
 </center>
 
