Adding Web Design Class Info
Adding Web Design Class Info

--- a/IMED1416/index.html
+++ b/IMED1416/index.html
@@ -20,7 +20,7 @@
         <tr>
             <td> 9/26/2022 </td>
             <td> Class Exercise 2 displays Hello World message </td>
-            <td> <a href="ClassEx2/HelloWorld.html">HelloWorld</a> </td>
+            <td> <a href="ClassEx2/HelloWorld.html">Hello World</a> </td>
         </tr>
         <tr>
             <td> 9/26/2022 </td>
@@ -86,6 +86,36 @@
             <td> 10/05/2022 </td>
             <td> Class Exercise 4 displays Flower CSS Box Models </td>
             <td> <a href="ClassEx4/box.html"> Flower Box Models </a> </td>
+        </tr> 
+        <tr>
+            <td> 10/19/2022 </td>
+            <td> Class Exercise 5 displays House Flowers </td>
+            <td> <a href="ClassEx5/Federal_Level/State_Level/City_Level/Neighborhood_Level/My_House/House.html"> House Flowers </a> </td>
+        </tr> 
+        <tr>
+            <td> 10/19/2022 </td>
+            <td> Class Exercise 5 displays Neighborhood Flowers </td>
+            <td> <a href="ClassEx5/Federal_Level/State_Level/City_Level/Neighborhood_Level/neighbor.html"> Neighborhood Flowers </a> </td>
+        </tr> 
+        <tr>
+            <td> 10/19/2022 </td>
+            <td> Class Exercise 5 displays City Flowers </td>
+            <td> <a href="ClassEx5/Federal_Level/State_Level/City_Level/city.html"> City Flowers </a> </td>
+        </tr> 
+        <tr>
+            <td> 10/19/2022 </td>
+            <td> Class Exercise 5 displays State Flowers </td>
+            <td> <a href="ClassEx5/Federal_Level/State_Level/state.html"> State Flowers </a> </td>
+        </tr> 
+        <tr>
+            <td> 10/19/2022 </td>
+            <td> Class Exercise 5 displays Federal Flowers </td>
+            <td> <a href="ClassEx5/Federal_Level/federal.html"> Federal Flowers </a> </td>
+        </tr> 
+        <tr>
+            <td> 10/19/2022 </td>
+            <td> Class Exercise 5 displays HTML Links </td>
+            <td> <a href="ClassEx5/links.html"> HTML Links </a> </td>
         </tr> 
     </table> 
 </body>
