--- a/IMED1416/index.html
+++ b/IMED1416/index.html
@@ -75,7 +75,7 @@
         <tr>
             <td> 9/26/2022 </td>
             <td> Class Exercise 3 displays Various Types of HTML Styles </td>
-            <td> <a href="ClassEx3/styles.html">Styles</a> </td>
+            <td> <a href="ClassEx3/Styles.html">Styles</a> </td>
         </tr> 
         <tr>
             <td> 9/26/2022 </td>
