--- a/IMED1416/index.html
+++ b/IMED1416/index.html
@@ -117,6 +117,26 @@
             <td> Class Exercise 5 displays HTML Links </td>
             <td> <a href="ClassEx5/links.html"> HTML Links </a> </td>
         </tr> 
+        <tr>
+            <td> 10/30/2022 </td>
+            <td> Class Exercise 6 displays JavaScript HTML Light Bulb Buttons </td>
+            <td> <a href="ClassEx6/TaskA.html"> JavaScript HTML Light Bulb Buttons </a> </td>
+        </tr> 
+        <tr>
+            <td> 10/31/2022 </td>
+            <td> Class Exercise 6 displays JavaScript Functions and Elements </td>
+            <td> <a href="ClassEx6/TaskB.html"> JavaScript Functions and Elements </a> </td>
+        </tr> 
+        <tr>
+            <td> 10/31/2022 </td>
+            <td> Class Exercise 6 displays JavaScript Output Displays </td>
+            <td> <a href="ClassEx6/TaskC.html"> JavaScript Output Displays </a> </td>
+        </tr> 
+        <tr>
+            <td> 10/31/2022 </td>
+            <td> Class Exercise 6 displays JavaScript HTML Flowers Buttons </td>
+            <td> <a href="ClassEx6/Flowers.html"> JavaScript HTML Flowers Buttons </a> </td>
+        </tr> 
     </table> 
 </body>
 </html>
