--- a/IMED1416/index.html
+++ b/IMED1416/index.html
@@ -136,6 +136,11 @@
             <td> 10/31/2022 </td>
             <td> Class Exercise 6 displays JavaScript HTML Flowers Buttons </td>
             <td> <a href="ClassEx6/Flowers.html"> JavaScript HTML Flowers Buttons </a> </td>
+        </tr>
+        <tr>
+            <td> 11/9/2022 </td>
+            <td> Class Exercise 7 displays Custom Branding X Factor Logo </td>
+            <td> <a href="ClassEx7/logo.html"> X Factor Logo </a> </td>
         </tr> 
     </table> 
 </body>
