--- a/index.html
+++ b/index.html
@@ -142,6 +142,16 @@
             <td> Class Exercise 7 displays Custom Branding X Factor Logo </td>
             <td> <a href="ClassEx7/logo.html"> X Factor Logo </a> </td>
         </tr> 
+        <tr>
+            <td> 11/23/2022 </td>
+            <td> Class Exercise 8 displays Tab Menu </td>
+            <td> <a href="ClassEx8/TabMenu.html"> Tab Menu </a> </td>
+        </tr> 
+        <tr>
+            <td> 11/23/2022 </td>
+            <td> Class Exercise 8 displays Top Nav Menu </td>
+            <td> <a href="ClassEx8/TopNavMenu.html"> Top Nav Menu </a> </td>
+        </tr> 
     </table> 
 </body>
 </html>
